# AroA-ETL

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  tests.yml
scripts/: alias  unpacking_new_ENC_workflows.ipynb
scripts/clustering-container/: pyproject.toml  run_clustering.py
scripts/dbquery-container/: load_data.ipynb  loadcredentials.py  persons_by_docid.ipynb  pyproject.toml  queries.py
scripts/deduplication-container/: deduplication_template.py  pyproject.toml
scripts/etl-container/: 01_unpacking.ipynb  02_processing.ipynb  03_deduplicate.ipynb  pyproject.toml
scripts/ki_indizierung/: clustering.ipynb  indizierung.ipynb  postprocessing.ipynb
scripts/matching-container/: pyproject.toml  run-matching-persdata.py  run-matching.py  update-persdata.py
src/aroa_etl/: utils.py
src/aroa_etl/attribute_processing/: aux_functions.py  column_processing.py  regex_conditions.py  string_utils.py
src/aroa_etl/enc/: deduplication.py  matching.py  processing.py  statistics.py  unpacking.py
src/aroa_etl/person_matching/: matching.py  person_clustering.py  similarity_measures.py
src/aroa_etl/zooniverse/: unpacking.py
testing_data/: marked_enc_data.csv  normalised_enc_data.csv  raw_enc_data.csv  unpacked_enc_data.csv
tests/enc/: deduplication_test.py  processing_test.py  unpacking_test.py
