[project]
name = "aroa_etl"
version = "1.0.0"
description = "Arolsen Archives ETL Code"
readme = "README.md"
authors = [
    { name = "Arolsen Archives", email = "pqm@arolsen-archives.org" }
]
requires-python = ">=3.12"
dependencies = [
    "datasketch>=1.6.5",
    "itables>=2.2.4",
    "iteration-utilities>=0.13.0",
    "jellyfish>=1.1.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest>=8.3.4",
    "rapidfuzz>=3.12.2",
    "tqdm>=4.67.1",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aroa_etl"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
