[project]
name = "processing"
version = "0.1.0"
description = "Arolsen Archives ETL Code"
readme = "README.md"
authors = [
    { name = "Arolsen Archives", email = "pqm@arolsen-archives.org" }
]
requires-python = ">=3.12"
dependencies = [
    "iteration-utilities>=0.13.0",
    "jellyfish>=1.1.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]


